--- a/app/index.html
+++ b/app/index.html
@@ -132,55 +132,93 @@
         </div>
     </header>
     <main>        
-        <section id = "advantage" class = "wrap">
-            <h2>
-                why <span>we</span>
-            </h2>
-            <blockquote>
-                <p>
-                    Great companies start in good company
-                </p>
-            </blockquote>
-            <div class = "equipment inner_grid">
-                <img src = "img/icon_computer.png" alt = "modern equipment">
-                <p>
-                    Modern equipment. Powerful computers
-                </p>
-            </div>
-            <div class = "events inner_grid">
-                <img src = "img/icon_hands.png" alt = "public events">
-                <p>
-                    Various public events
-                </p>
-            </div>
-            <div class = "meeting inner_grid">
-                <img src = "img/icon_meeting.png" alt = "meeting rooms">
-                <p>
-                    Comfortable meeting rooms, with the whole set of equipment
-                </p>
-            </div>
-            <div class = "discounts inner_grid">
-                <img src = "img/icon_discounts.png" alt = "discounts">
-                <p>
-                    Discounts for regular customers
-                </p>
-            </div>
-            <div class = "access inner_grid">
-                <img src = "img/icon_watches.png" alt = "round-the-clock acess">
-                <p>
-                    Access to the office 24/7
-                </p>
-            </div>
-            <div class = "cleaning inner_grid">
-                <img src = "img/icon_cleaning.png" alt = "daily cleaning">
-                <p>
-                    Quality daily wet cleaning
-                </p>
+        <section id = "advantage">
+            <div class="wrap">
+                <h2>
+                    why <span>we</span>
+                </h2>            
+                <div class = "inner_grid">
+                    <blockquote>
+                        <p>
+                            <span></span>
+                            Great companies start in good company
+                        </p>
+                    </blockquote>
+                    <div class="inner_wrapper">
+                        <div class = "equipment">
+                            <div class = "picture left">
+                                <img class="who_pictogram" src = "img/icon_computer.png" alt = "modern equipment">
+                            </div>
+                            <div class="text left">
+                                <p>
+                                    Modern equipment. 
+                                    Powerful computers
+                                </p>    
+                            </div>                        
+                        </div>
+                        <div class = "meeting">
+                            <div class = "picture left">
+                                <img class="who_pictogram" src = "img/icon_meeting.png" alt = "meeting rooms">
+                            </div>
+                            <div class="text left">    
+                                <p>
+                                    Comfortable meeting rooms, 
+                                    with the whole 
+                                    set of equipment
+                                </p>
+                            </div>
+                        </div>
+                        <div class = "access">
+                            <div class = "picture right">
+                                <img class="who_pictogram" src = "img/icon_watches.png" alt = "round-the-clock acess">
+                            </div>
+                            <div class="text right">
+                                <p>
+                                    Access to the 
+                                    office 24/7
+                                </p>
+                            </div>
+                        </div>
+                        <div class = "events">
+                            <div class = "picture left">
+                                <img class="who_pictogram"  src = "img/icon_hands.png" alt = "public events">
+                            </div>
+                            <div class="text left">
+                                <p>
+                                    Various public events
+                                </p>
+                            </div>
+                        </div>                        
+                        <div class = "discounts">
+                            <div class = "picture right">
+                                <img class="who_pictogram" src = "img/icon_discounts.png" alt = "discounts">
+                            </div>
+                            <div class="text right">
+                                <p>
+                                    Discounts 
+                                    for regular 
+                                    customers
+                                </p>
+                            </div>
+                        </div>                        
+                        <div class = "cleaning">
+                            <div class = "picture right">
+                                <img class="who_pictogram" src = "img/icon_cleaning.png" alt = "daily cleaning">
+                            </div>
+                            <div class="text right">
+                                <p>
+                                    Quality daily 
+                                    wet cleaning
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>            
         </section>
         <section id = "our_offices" class = "wrap">
-            <div class = "50_seats">
-                <div class = "animation fade-in-right">
+            <div class = "seats_50">
+                <div class = "article animation fade-in-right">
                     <h3>
                         office 50 seats
                     </h3>
@@ -198,8 +236,8 @@
                     </button>
                 </div>
             </div>
-            <div class = "20_seats">
-                <div class = "animation fade-in-left">
+            <div class = "seats_20">
+                <div class = "article animation fade-in-left">
                     <h3>
                         office 20 seats
                     </h3>
@@ -217,8 +255,8 @@
                     </button>
                 </div>
             </div>
-            <div class = "6_seats">
-                <div class = "animation fade-in-right">
+            <div class = "seats_6">
+                <div class = "article animation fade-in-right">
                     <h3>
                         office 6 seats
                     </h3>
@@ -243,9 +281,13 @@
                     <img src = "img/discount_girl.png" alt = "discount">
                 </div>
                 <div class = "discount_form">
-                    <h2>
-                        HURRY UP
-                        <span>and get</span>
+                    <h2 >
+                        HURRY UP   
+                    </h2>                
+                    <p>
+                        and get
+                    </p>
+                    <h2>                    
                         40% dicount
                     </h2>                    
                     <form>
@@ -398,7 +440,7 @@
                </div> 
             </div>
         </section>
-        <section id = "gift" class = "wrap">
+        <section id = "gift" class = "wrap">            
             <img src = "img/join_girl_laptop.png" alt = "girl with laptop">
             <div class = "free_month_form">
                 <h2>
@@ -424,7 +466,7 @@
                 <p>
                     work with us
                 </p>
-            </div>
+            </div>            
         </section>
         <section id = "location" class = "wrap">
             <div class = "frame">
