--- a/app/index.html
+++ b/app/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/main.css"> 
-    <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="../fonts/font-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://i.icomoon.io/public/temp/34e0b2bc6c/UntitledProject/style.css">
     <title>Coworking</title>
     <script type="text/javascript" src="../js/menu.js"></script>
    <!--  <link rel="stylesheet" type="text/css" href="slick/slick/slick.css"/>
@@ -229,7 +230,8 @@
                         <a href = ""> 
                             <!-- href!!! -->
                             see more 
-                        </a>                      
+                            <span class="icon-arrow-right2"></span>                        
+                        </a>                                                
                     </div>
                     <button class = "book_office"> 
                         <a href="#book_place">book</a>
@@ -248,6 +250,7 @@
                         <a href = ""> 
                             <!-- href!!! -->
                             see more 
+                            <span class="icon-arrow-right2"></span>                        
                         </a>                      
                     </div>
                     <button class = "book_office"> 
@@ -267,6 +270,7 @@
                         <a href = ""> 
                             <!-- href!!! -->
                             see more 
+                            <span class="icon-arrow-right2"></span>   
                         </a>                      
                     </div>
                     <button class = "book_office"> 
