slider and map started

--- a/app/index.html
+++ b/app/index.html
@@ -351,63 +351,144 @@
         </section>
         <section id = "reviews" class = "wrap">
             <button class = "prev" type = "button"></button>
-            <div class = "slider_one">
-                <div class = "up alex_opinion">
-                    <p class = "opinion">
-                        Сonsectetuer adipiscing  elit. Aenean commodo ligula eget dolor. Aenean massa.
-                    </p>
-                    <a href="" class = "opinion_href"></a>
-                </div>
-                <div class = "down alex">
-                    <div>
-                        <h4>
-                            Alex, 35
-                        </h4>
-                        <p>
-                            web-designer
+            <div class = "slider_full_size">
+                <div class = "slider_set slider_active">
+                    <div class = "up alex_opinion">
+                        <p class = "opinion">
+                            Сonsectetuer adipiscing  elit. Aenean commodo ligula eget dolor. Aenean massa.
                         </p>
+                        <a href="@" class = "opinion_href">ooo</a>
                     </div>
-                </div>
-                <div class = "up table"></div>
-                <div class = "down denis">
-                    <div>
-                        <h4>
-                            Denis, 28
-                        </h4>
-                        <p>
-                            php developer
+                    <div class = "down alex">
+                        <div class = "opinion_author">
+                            <h4>
+                                Alex, 35
+                            </h4>
+                            <p>
+                                web-designer
+                            </p>
+                        </div>
+                    </div>
+                    <div class = "up table"></div>
+                    <div class = "down denis">
+                        <div class = "opinion_author">
+                            <h4>
+                                Denis, 28
+                            </h4>
+                            <p>
+                                php developer
+                            </p>
+                        </div>
+                    </div>
+                    <div class = "up denis_opinion">
+                        <p class = "opinion">
+                            Dis parturient montes,  nascetur ridiculus mus. Onec quam felis ultrici esnec, pelentesque.
                         </p>
+                        <a href="#" class = "opinion_href">ooo</a>
                     </div>
-                </div>
-                <div class = "up denis_opinion">
-                    <p class = "opinion">
-                        Dis parturient montes,  nascetur ridiculus mus. Onec quam felis ultrici esnec, pelentesque.
-                    </p>
-                    <a href="" class = "opinion_href"></a>
-                </div>
 
-                <div class = "down anna">
-                    <div>
-                        <h4>
-                            Anna, 23
-                        </h4>
-                        <p>
-                            art director
+                    <div class = "down anna">
+                        <div class = "opinion_author">
+                            <h4>
+                                Anna, 23
+                            </h4>
+                            <p>
+                                art director
+                            </p>
+                        </div>
+                    </div>
+                    <div class = "up anna_opinion">
+                        <p class = "opinion">
+                            Aenean massa. Cum sociis  natoque penatibus et  magnis dis parturien montes, nascetur.
                         </p>
+                        <a href="#" class = "opinion_href">ooo</a>
+                    </div>
+                    <div class = "up chairs"></div>
+                    <div class = "up jane_opinion">
+                        <p class = "opinion">
+                            Fringilla vel, aliquet nec,  vulputate eget, arcu. In  enim justo, rhoncus ut, imperdiet a, venat.
+                        </p>
+                        <a href="#" class = "opinion_href">ooo</a>
+                    </div>
+                    <div class = "down jane">
+                        <div class = "opinion_author">
+                            <h4>
+                                Jane, 27
+                            </h4>
+                            <p>
+                                jurnalist
+                            </p>
+                        </div>
                     </div>
                 </div>
-                <div class = "up anna_opinion">
-                    <p class = "opinion">
-                        Aenean massa. Cum sociis  natoque penatibus et  magnis dis parturien montes, nascetur.
-                    </p>
-                    <a href="" class = "opinion_href"></a>
-                </div>
-                <div class = "up chairs"></div>
-                <div class = "up jane_opinion">
-                    <p class = "opinion">
-                        Fringilla vel, aliquet nec,  vulputate eget, arcu. In  enim justo, rhoncus ut, imperdiet a, venat.
-                    </p>
-                    <a href="" class = "opinion_href"></a>
+                <div class = "slider_set slider_not_active">
+                    <div class = "up alex_opinion">
+                        <p class = "opinion">
+                            Сonsectetuer adipiscing  elit. Aenean commodo ligula eget dolor. Aenean massa.
+                        </p>
+                        <a href="#" class = "opinion_href">ooo</a>
+                    </div>
+                    <div class = "down alex">
+                        <div class = "opinion_author">
+                            <h4>
+                                Alex, 35
+                            </h4>
+                            <p>
+                                web-designer
+                            </p>
+                        </div>
+                    </div>
+                    <div class = "up table"></div>
+                    <div class = "down denis">
+                        <div class = "opinion_author">
+                            <h4>
+                                Denis, 28
+                            </h4>
+                            <p>
+                                php developer
+                            </p>
+                        </div>
+                    </div>
+                    <div class = "up denis_opinion">
+                        <p class = "opinion">
+                            Dis parturient montes,  nascetur ridiculus mus. Onec quam felis ultrici esnec, pelentesque.
+                        </p>
+                        <a href="#" class = "opinion_href">ooo</a>
+                    </div>
+
+                    <div class = "down anna">
+                        <div class = "opinion_author">
+                            <h4>
+                                Anna, 23
+                            </h4>
+                            <p>
+                                art director
+                            </p>
+                        </div>
+                    </div>
+                    <div class = "up anna_opinion">
+                        <p class = "opinion">
+                            Aenean massa. Cum sociis  natoque penatibus et  magnis dis parturien montes, nascetur.
+                        </p>
+                        <a href="#" class = "opinion_href">ooo</a>
+                    </div>
+                    <div class = "up chairs"></div>
+                    <div class = "up jane_opinion">
+                        <p class = "opinion">
+                            Fringilla vel, aliquet nec,  vulputate eget, arcu. In  enim justo, rhoncus ut, imperdiet a, venat.
+                        </p>
+                        <a href="#" class = "opinion_href">ooo</a>
+                    </div>
+                    <div class = "down jane">
+                        <div class = "opinion_author">
+                            <h4>
+                                Jane, 27
+                            </h4>
+                            <p>
+                                jurnalist
+                            </p>
+                        </div>
+                    </div>
                 </div>
             </div>
             <button class = "next" type = "button"></button>
@@ -525,6 +606,14 @@
                     <h3>
                         1969 OPEN
                     </h3>
+                </div>
+                <div id = "map">
+                    <iframe id="map_google" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d641.
+                    3005798771194!2d36.23173552927331!3d49.988816198713415!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.
+                    1!3m3!1m2!1s0x4127a0f1462cbb5f%3A0x2cbf5de4c1202974!2z0L_QvtC00YrQtdC30LQg4oSWMSwgNC3QuSDRjdGC0LDQtiwg0L_Qu9C-
+                    0YnQsCDQmtC-0L3RgdGC0LjRgtGD0YbRltGXLCAxLCDQpdCw0YDQutGW0LIsINCl0LDRgNC60ZbQstGB0YzQutCwINC-
+                    0LHQu9Cw0YHRgtGMLCA2MTAwMA!5e0!3m2!1sru!2sua!4v1544453369622" 
+                    frameborder="0" style="border:0" allowfullscreen></iframe>
                 </div>
             </div>
         </section>
